[package]
authors = ["The Rust Project Developers"]
name = "panic_abort"
version = "0.0.0"

[lib]
path = "lib.rs"
test = false
bench = false
doc = false

[dependencies]
core = { path = "../libcore" }

[target.'cfg(not(target_os = "switch"))'.dependencies]
libc = { path = "../rustc/libc_shim" }
compiler_builtins = { path = "../rustc/compiler_builtins_shim" }
