[package]
authors = ["The Rust Project Developers"]
name = "panic_abort"
version = "0.0.0"

[lib]
path = "lib.rs"
test = false
bench = false
doc = false

#[dependencies]
#core = { path = "../libcore" }

[target.'cfg(not(target_os = "switch"))'.dependencies]
libc = { path = "../rustc/libc_shim" }

[target.'cfg(target_os = "switch")'.dependencies]
megaton-hammer = { path = "../../../megatonhammer/megaton-hammer" } #git = "https://github.com/megatonhammer/megaton-hammer" }
