[package]
authors = ["The Rust Project Developers"]
name = "unwind"
version = "0.0.0"
build = "build.rs"

[lib]
name = "unwind"
path = "lib.rs"
test = false
bench = false
doc = false

#[dependencies]
#core = { path = "../libcore" }

[target.'cfg(not(target_os = "switch"))'.dependencies]
libc = { path = "../rustc/libc_shim" }
